Added Text Rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ include(cmake/glfw.cmake)
 include(cmake/glm.cmake)
 # Assimp
 include (cmake/assimp.cmake)
+# FreeType
+include (cmake/freetype.cmake)
 
 ### END DEPS ###
 
@@ -64,16 +66,14 @@ target_link_libraries(SOGLR PUBLIC
     glad
     glm
     assimp
+    freetype
 )
-
-
-
-
 
 target_include_directories(SOGLR PUBLIC
     ${PROJECT_SOURCE_DIR}/src/
     ${PROJECT_SOURCE_DIR}/vendor/glad/include
     ${PROJECT_SOURCE_DIR}/include/SOGLR
     ${PROJECT_SOURCE_DIR}/
+    ${PROJECT_SOURCE_DIR}/freetype/include
     ${PROJECT_SOURCE_DIR}/build/_deps/glm-src/glm
 )
